# hearth

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  engram.yaml  pyproject.toml
.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_seed_family_members.py  0003_update_family_display_names.py  0004_uploads.py  0005_uploads_progress_columns.py  0006_events_and_corrections.py  0007_event_corrections_event_id_index.py
backend/app/: config.py  config_overrides.py  main.py  static.py
backend/app/api/: __init__.py  admin.py  admin_settings.py  admin_users.py  auth.py  events.py  family.py  google.py  health.py  setup.py  tv.py  uploads.py
backend/app/auth/: __init__.py  bootstrap.py  dependencies.py  passwords.py  sessions.py
backend/app/db/: base.py  models.py
backend/app/google/: __init__.py  calendar_client.py  health_state.py  oauth_client.py  publish.py  sync.py
backend/app/uploads/: __init__.py  color.py  few_shot.py  friendly_time.py  grid_detect.py  pipeline.py  preprocessing.py  queue.py  runner.py  storage.py
backend/app/vision/: __init__.py  _parse.py  _prompt.py  anthropic_provider.py  gemini_provider.py  ollama_provider.py
design_handoff_hearth/: CLAUDE_CODE_PROMPT.md  README.md
design_handoff_hearth/design/: Hearth UI.html  desktop-screens.jsx  tv-screens.jsx
design_handoff_status_view/: CLAUDE_CODE_PROMPT.md  README.md
design_handoff_status_view/design/: Hearth UI.html  mobile-screens.jsx  mobile-status-v2.jsx  primitives.jsx  tokens.js
docker/: entrypoint.sh
docs/: google-oauth-setup.md  spec.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/auth/: AuthProvider.test.tsx  AuthProvider.tsx  RequireAuth.test.tsx  (+3 more)
tests/backend/: conftest.py  test_admin_family_endpoints.py  test_admin_settings_endpoints.py  test_admin_users_endpoints.py  test_admin_vision_health.py  test_alembic.py  test_auth_endpoints.py  test_auth_passwords.py  test_auth_sessions.py  test_bootstrap.py  test_color_match.py  test_config_overrides.py  test_db_models.py  test_events_endpoints.py  test_events_models.py  test_exif.py  test_family_endpoint.py  test_few_shot.py  test_friendly_time.py  test_google_calendar_client.py  test_google_calendar_events.py  test_google_calendars_endpoints.py  test_google_health_endpoint.py  test_google_health_state.py  test_google_oauth_endpoints.py  test_google_sync.py  test_google_sync_endpoint.py  test_grid_detect.py  test_health.py  test_lifespan_vision_probe.py  test_pipeline.py  test_pipeline_durations.py  test_pipeline_medians.py  test_pipeline_queue.py  test_pipeline_recovery.py  test_preprocessing.py  test_real_pipeline.py  test_runner.py  test_setup_complete_google.py  test_spa.py  (+11 more)
(+150 files in other folders)
