[project]
name = "hearth"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0,<3.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "passlib[bcrypt]>=1.7,<2.0",
    "itsdangerous>=2.1,<3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.9",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
exclude = ["*.ini", "*.mako"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W", "RUF"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests/backend"]
asyncio_mode = "auto"
