[project]
name = "hearth"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0,<3.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "bcrypt>=4.0,<6.0",
    "itsdangerous>=2.1,<3.0",
    "google-auth-oauthlib>=1.2,<2.0",
    "google-api-python-client>=2.0,<3.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1,<3.0",
    "httpx>=0.27,<1.0",
    "google-generativeai>=0.8,<1.0",
    "anthropic>=0.40,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.9",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
exclude = ["*.ini", "*.mako"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W", "RUF"]
# B008: FastAPI uses Depends() in function argument defaults — this is the
# canonical pattern recommended by FastAPI docs; suppressing globally here.
ignore = ["B008"]

[tool.mypy]
strict = true
python_version = "3.12"

# Google libraries have partial or no type stubs — suppress missing-import
# and untyped-call errors for these packages only.
[[tool.mypy.overrides]]
module = [
    "google_auth_oauthlib.*",
    "google.oauth2.*",
    "google.auth.*",
    "googleapiclient.*",
]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "google.generativeai",
    "google.generativeai.*",
]
ignore_missing_imports = true
ignore_errors = true


[tool.pytest.ini_options]
testpaths = ["tests/backend"]
asyncio_mode = "auto"
filterwarnings = [
    # google-generativeai 0.8 emits a FutureWarning about migrating to google-genai.
    # The spec pins this package version; the warning is cosmetic only.
    "ignore::FutureWarning",
]
